--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -11,7 +11,7 @@
   title: Postdoc Researcher
   info: DAI Lab, MIT
 - name: WARREN WANG
-  image: 
+  image: wang.jpg
   title: Undergraduate Researcher
   info: DAI Lab, MIT
 - name: MICHAELA HENRY
