--- a/_data/tabs.yaml
+++ b/_data/tabs.yaml
@@ -6,15 +6,15 @@
 - title: Sibyl-API
   slug: sibylapi
   subtitle: API calls for generalizable ML augmentations
-  image: /images/tabs/Sibyl-API.svg
+  image: /images/tabs/img/Sibyl-API.svg
   icon: /images/tabs/Sibyl-API-icon.svg
 - title: Pyreal
   slug: pyreal
   subtitle: Interpretable feature transformations and explanations
-  image: /images/tabs/Pyreal.svg
+  image: /images/tabs/img/Pyreal.svg
   icon: /images/tabs/Sibylapp-icon.svg
 - title: VBridges
   slug: vbridges
   subtitle: Explainable ML for medical data
-  image: /images/tabs/Pyreal.svg 
+  image: /images/tabs/img/VBridge.svg
   icon: /images/tabs/VBridge-icon.svg
