--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,5 +1,5 @@
 - name: ALEXANDRA ZYTEK
-  image: alexandra.png
+  image: alexandra.jpg
   title: Project Lead
   info: DAI Lab, MIT
 - name: Kalyan Veeramachaneni
