--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: sibyl@mit.edu
 description: > # this means to ignore newlines until "baseurl:"
   Sibyl
 # baseurl:  # the subpath of your site, e.g. /blog/
-# url: "http://sibyl-dev.github.io" # the base hostname & protocol for your site
+url: "https://sibyl-ml.dev" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
