--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@
   href: '#research'
 - title: "Team"
   href: '#team'
-- title: "Blog"
-  href: '#use-cases'
+# - title: "Blog"
+#   href: '#use-cases'
