--- a/_data/software.yaml
+++ b/_data/software.yaml
@@ -1,5 +1,5 @@
 - title: "Framework:"
   projects:
-    - name: ballet/ballet
+    - name: sibyl-dev/pyreal
       url: >-
-        <a href="https://github.com/ballet/ballet"><img src="https://gh-card.dev/repos/ballet/ballet.svg"></a>
+        <a href="https://github.com/sibyl-dev/pyreal"><img src="https://gh-card.dev/repos/sibyl-dev/pyreal.svg"></a>
