--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,10 +1,10 @@
 - name: ALEXANDRA ZYTEK
   image: alexandra.jpg
-  title: Project Lead
+  title: PhD (Project Lead)
   info: DAI Lab, MIT
 - name: DONGYU LIU
-  image: dongyu.jpg
-  title: Postdoc Researcher
+  image: dongyu.jpeg
+  title: Postdoc (Project Co-Lead)
   info: DAI Lab, MIT
 - name: WARREN WANG
   image: wang.jpg
