--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Sibyl
 # baseurl:  # the subpath of your site, e.g. /blog/
 url: "https://sibyl-ml.dev" # the base hostname & protocol for your site
+# url: "http://localhost:3000" # the base hostname & protocol for your site
+
 twitter_username: jekyllrb
 github_username:  jekyll
 
